disconnect everything when removing a task

when removing a task, the task ptr was deleted, do disconnect any pending signals
BUG:286759